# NMPT

./: .gitignore  CMakeLists.txt  README.md
cmake/: CreatePackage.cmake  FindLinkedDirectories.cmake
doc/html/: annotated.html  bib__page.html  bib_page.html  class_block_timer-members.html  class_block_timer.html  class_box_feature-members.html  class_box_feature.html  class_box_feature2-members.html  class_box_feature2.html  class_box_feature2__coll__graph.map  class_box_feature2__coll__graph.md5  class_box_feature2__inherit__graph.map  class_box_feature2__inherit__graph.md5  class_box_feature__coll__graph.map  class_box_feature__coll__graph.md5  class_box_feature__inherit__graph.map  class_box_feature__inherit__graph.md5  class_convolutional_logistic_policy-members.html  class_convolutional_logistic_policy.html  class_detection_evaluator-members.html  class_detection_evaluator.html  class_detection_evaluator2-members.html  class_detection_evaluator2.html  class_fast_patch_list-members.html  class_fast_patch_list.html  class_fast_patch_list2-members.html  class_fast_patch_list2.html  class_fast_patch_list2__coll__graph.map  class_fast_patch_list2__coll__graph.md5  class_fast_patch_list__coll__graph.map  class_fast_patch_list__inherit__graph.md5  class_fast_salience-members.html  class_fast_salience.html  class_fast_salience__coll__graph.map  class_fast_salience__coll__graph.md5  class_fast_saliency-members.html  class_fast_saliency.html  class_fast_saliency__coll__graph.map  class_fast_saliency__coll__graph.md5  class_feature-members.html  (+276 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_68.html  classes_69.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_73.html  classes_74.html  functions_61.html  functions_62.html  functions_63.html  (+39 more)
lib/: FastSalience.cpp  HaarFeature2.cpp
src/: CVPRTestSpeed.cpp  CVPRTrainModels.cpp  ChooseSaccadeTargets.cpp  CreateBoostingInitialPatchDataset.cpp  CreateBoostingInitialPatchDataset2.cpp  EstimateInternalMotion.cpp  FastSUN.cpp  FastSUNImage.cpp  FastSUNParameters.cpp  FoveatedFaceTracker.cpp  FoveatedFaceTrackerImage.cpp  ImageDataSet2OpenCVDescriptionFormat.cpp  InternalMotionModel.old_gradients._cpp  NCvCapture.mm  PatchList2._cpp  PatchList2._h  SimpleFaceTracker.cpp  SimpleSalienceExample.cpp  TrackObjectsInScene.cpp  TrainCascadedDetector.cpp  TrainGentleBoost2.cpp  TrainNarrowFOVModel.cpp
